Inserted curriculum and passed link on download button

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
+                    <a class="btn btn-xl btn-outline-light" href="assets/curriculoPdf.pdf" target="_blank">
                         <i class="fas fa-download mr-2"></i>
-                        Baixe um currículo
+                        Baixe o currículo
                     </a>
                 </div>
             </div>
