Changed color of header and about

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead bg-primary text-white text-center">
+        <header class="masthead text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/img/myPhoto.jpg" alt="" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Lucas Vieira Vicente</h1>
                 <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
+                <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
@@ -50,19 +50,19 @@
             </div>
         </header>
         <!-- About Section-->
-        <section class="page-section bg-primary text-white mb-0" id="about">
+        <section class="page-section mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">Sobre o Lucas</h2>
+                <h2 class="page-section-heading text-center text-uppercase">Sobre o Lucas</h2>
                 <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
+                <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
                         <p class="lead">
-                            Uma pessoa que tem a motivação e a felicidade ao trazer a solução de necessidades por meio do desenvolvimento de sistemas. Não é lá um leitor assíduo de livros, mas sempre tenta adquirir mais e mais conhecimento sobre desenvolvimento, seja por cursos onlines, vídeos ou leitura de artigos e livros e claro que sempre que tem um tempo livre colocar em prática tudo isso.                            
+                            Uma pessoa que tem a motivação e a felicidade de trazer a solução de necessidades por meio do desenvolvimento de sistemas. Não é lá um leitor assíduo de livros, mas sempre tenta adquirir mais e mais conhecimento sobre desenvolvimento, seja por cursos onlines, vídeos ou leitura de artigos e livros, e claro que sempre que tem um tempo livre colocar em prática tudo isso.                            
                         </p>
                     </div>
                     <div class="col-lg-4 mr-auto">
@@ -73,7 +73,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="assets/curriculoPdf.pdf" target="_blank">
+                    <a class="btn btn-xl btn-outline-secondary" href="assets/curriculoPdf.pdf" target="_blank">
                         <i class="fas fa-download mr-2"></i>
                         Baixe o currículo
                     </a>
