Removed not used php file, and inserted ajax fromspree

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Outras redes</h4>
+                        <h4 class="text-uppercase mb-4">Minhas redes sociais</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://api.whatsapp.com/send?phone=5511983773017&text=Olá%20,%20tudo%20bem?%20Te%20encontrei%20no%20seu%20currículo%20online"><i class="fab fa-fw fa-whatsapp"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/lucas-vieira-vicente-885726127/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/lucasvieiravicente"><i class="fab fa-fw fa-github"></i></a>
