Add repository of this project section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Sobre</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Conhecimentos</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#repository">Repositório</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contato</a></li>
                     </ul>
                 </div>
@@ -175,6 +176,24 @@
                             <img class="img-fluid" src="assets/img/portfolio/git.png" alt="Git" />
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- About Section-->
+        <section class="page-section mb-0" id="repository">
+            <div class="container">
+                <!-- About Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase">Veja esta aplicação no Github</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Button-->
+                <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-secondary" href="https://github.com/lucasvieiravicente/lucasvieiravicente.github.io" target="_blank">
+                        <i class="fab fa-fw fa-github mr-2"></i>
+                        Repositório desta aplicação
+                    </a>
                 </div>
             </div>
         </section>
